# TeamBench

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
datasets/: README.md  adult_income.csv  ames_housing.csv  credit_card_fraud.csv  download_datasets.py  fred_macro.csv  lending_club.csv  nyc_taxi.csv  online_retail.csv  stackoverflow.csv  telco_churn.csv  who_gho.csv
docs/: human_baseline_protocol.md  leaderboard_protocol.md
generators/: gen_cr4_api_review.py  gen_cr5_test_coverage.py  gen_cross1_api_contract.py  gen_cross2_schema_evolution.py  gen_cross3_protocol_bridge.py  gen_cross4_auth_federation.py  gen_crypto1_nonce_reuse.py  gen_crypto2_timing_safe.py  gen_crypto3_cert_chain.py  gen_crypto4_kdf_migration.py  gen_d5_query_optimize.py  gen_d6_data_reconcile.py  gen_dist1_queue_race.py  gen_dist2_consensus_partition.py  gen_dist3_idempotency.py  gen_dist4_clock_skew.py  gen_gh1000_numpy_19869.py  gen_gh1001_numpy_30855.py  gen_gh1002_scipy_24753.py  gen_gh1003_scipy_24496.py  gen_gh1004_dask_11665.py  gen_gh1005_ray_60236.py  gen_gh1006_spacy_13068.py  gen_gh1007_spacy_13040.py  gen_gh1008_spacy_12749.py  gen_gh1009_spacy_12486.py  gen_gh100_deno_32878.py  gen_gh1010_great_expectati_10406.py  gen_gh1011_great_expectati_8062.py  gen_gh1012_autogluon_3480.py  gen_gh1013_autogluon_4290.py  gen_gh1014_pymc_7809.py  gen_gh1015_scikit_learn_28095.py  gen_gh1016_scikit_learn_17575.py  gen_gh1017_scikit_learn_21654.py  gen_gh1018_scikit_learn_25432.py  gen_gh1019_transformers_36455.py  gen_gh101_deno_32811.py  gen_gh1020_transformers_20318.py  gen_gh1021_transformers_17331.py  (+1235 more)
harness/: ablation.py  agent_interface.py  agent_loop.py  batch_runner.py  benchmark_stats.py  cli.py  compute_tni.py  framework_adapter.py  gemini_adapter.py  human_baseline.py  orchestrator.py  plot_results.py  run_all.py  schemas.py
human_eval/: selected_20_tasks.json
leaderboard/: README.md  app.py  requirements.txt
paper/: EXPERIMENT_FACTSHEET.md  paper.tex  references.bib
scripts/: analyze_crossmodel.sh  analyze_hetero.py  analyze_rds_rinc.py  analyze_second_model.py  analyze_strong_baseline.py  build_hf_dataset.py  (+26 more)
(+950 files in other folders)
